Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@import "~src/scss/_variables.scss";


  
  .footerLogo {
    height: 50px;
    float: right;
    margin: 5px 0;
  }
  
  a.signOut {
    cursor: pointer;
  }
  
  .dropdown-menu {
    z-index: 1021;
  }
  
  nav .dropdown-item:hover {
    background-color: $select-and-nav-dropdown-hover;
  }

  .navbar-logo {
    img {
      height: 105px;
    }
    padding: 0px;
    float:left;
    position:absolute;
    z-index:1025;
    left:0;
    top: 0
  }

  nav{
    padding-top:0;
    padding-bottom:0;
  }

  .navbar {
    a.nav-link,
    a.nav-link::before,
    a.nav-link::after {
      transition: all .5s;
    }
  }

  // primary nav
  .navbar.navbar-zybach{
    background-color: $header-background;
    border-bottom: 1px solid $header-background;

    #navbar2 {
      height: 100%;
      ul {
        height: 100%;
      }
      li {
        height: 100%;
      }
    }
        
    a.nav-link
    {
      color: $header-nav-link;
    }

    .nav-item img{
      height: 50px;
    }

    li {
      transition: all .5s;
      position: relative;
    }

    li.currentPage, li:hover{
      background-color: $button-hover-background;
    }
  }

  // secondary nav
  .navbar.navbar-zybach-secondary{
    background-color: #ffffff;
    font-size: 12px;
    font-weight: bold;
    
    a.nav-link:hover {
      color: $select-and-nav-hover;
    }
    
    a.nav-link
    {
      color: $select-and-nav-hover;
    }

    a:not(.dropdown-item) {
      padding-left: 0;
      padding-right: 16px;
    }
  }
  
  // title bar and current page header
  .navbar-responsive-current-page{
    color: white;
    background-color: $button-hover-background;
    div {
      padding-left: 16px;
      padding-top: 0;
    }
  }

  .navbar-responsive-header, .navbar-responsive-current-page {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left:0;
  }
  
  // positional adjustments for the dashboard, map, and search items of the primary nav
  .dashboardItem{
    a {
      padding-top: 0px;
      padding-bottom: 0px;
    }
    img {
      padding-right: 5px;
    }
    padding-top: 10px;
  }

  .mapItem {
    padding-left: 7px;
    a {
      padding:0;
    }

    img {
      padding-right: 7px;
    }
    padding-top: 10px;
  }

  .searchItem {
    padding-left: 7px;
    padding-top: 10px;
    padding-right: 8px;
    img {
      padding-right: 7px;
    }
  }

  //responsive adjustments

  @media screen and (min-width: 992px){
    .navbar-zybach-secondary {
      height:35px;
    }
    .navbar-zybach{
      height: 71px;
    }
    .navbar-responsive-header, .navbar-responsive-current-page {
      display:none;
    }
    .logoPadding{
      padding-left: 294px;
    }
    .mapItem, .dashboardItem{
      width: 200px;
      text-align: left;
    }
    li.currentPage::after {
      content: '';
      position: absolute;
      left: 42%;
      top: 100%;
      width: 0;
      height: 0;
      border-left: 20px solid transparent;
      border-right: 20px solid transparent;
      border-top: 20px solid $button-hover-background;
      clear: both;
    }
  }

  @media screen and (max-width: 992px){
    .navbar-logo, .navbar-brand-primary {
      display:none;
    }
    .navbar-zybach:not(.navbar-responsive-header), #navbar2{
      padding: 0 !important;
    }

    .navbar-zybach {
      .nav-item {
        padding-left: 10px;
        padding-bottom: 5px;
      }

      .searchItem {
        padding-left: 20px;
      }
    }
  }

